# gtm-radar

./: .env.example  .gitignore  .vercelignore  AGENTS.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  ORCHESTRATION.md  PRODUCT.md  README.md  package-lock.json  package.json  vercel.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
analysis/: CONTRACT_fitjob.md  MANIFEST.in  OSS_README.md  PACKAGING.md  README.md  SCALE.md  pyproject.toml  requirements.txt
analysis/src/: assembly.py  assets.py  baseline.py  bayes.py  bayesian.py  contract.py  delivery.py  did.py  domains.py  dummy.py  experiment.py  features.py  fit_real.py  honesty.py  hypotheses.py  intervention.py  jobs.py  labeling.py  matching.py  moat.py  models.py  rows.py  scale.py  scale_path.py  service.py  winner_loser.py
analysis/tests/: conftest.py  test_assembly.py  test_assets.py  test_baseline.py  test_bayes.py  test_bayesian.py  test_delivery.py  test_did.py  test_domains.py  test_example.py  test_experiment.py  test_features.py  test_honesty.py  test_honesty_audit.py  test_hypotheses.py  test_intervention.py  test_labeling.py  test_matching.py  test_moat.py  test_packaging.py  test_phase1_integration.py  test_phase2_integration.py  test_phase3_integration.py  test_phase4_integration.py  test_phase5_integration.py  test_roundtrip.py  test_rows.py  test_scale.py  test_service.py  test_winner_loser.py
analysis/tests/fixtures/: README.md  README_crm.md  company.json  company_crm.json  fit_request.json  measurement.json  measurement_crm.json  page.json  page_crm.json  query.json  query_crm.json
convex/: README.md  actions.example.ts  analysis.ts  analysisJobs.ts  asset.ts  auth.config.ts  board.ts  crons.ts  customers.ts  devSeed.ts  diagnose.ts  env.d.ts  experiments.ts  measure.ts  moat.ts  records.ts  schema.ts  sourcing.ts
convex/_generated/: api.d.ts
convex/lib/: auth.ts  compliance.ts  domain.ts
docs/: ARCHITECTURE.md  CONTRACT.md  GO-LIVE-WORKFLOW.md  PRD.md  SECURITY.md  TESTING.md
docs/phase-cards/: INDEX.md  P1-Platform-and-Experience.md  P2-Measurement-Engine.md  P3-Sourcing-and-Enrichment.md  P4-Intelligence-and-Loop.md
measurement/: CONTRACT_measurement.md  COSTS.md  README.md  package.json  tsconfig.json
measurement/scripts/: p0-smoke.ts  p2-3-live.ts  record-fixture.ts
measurement/src/: aggregate.ts  budget.ts  contract-records.ts  cost.ts  dispatch.ts  drift.ts  engine.ts  experiment-records.ts  experiment.ts  flipRate.ts  gemini.ts  label.ts  labelTable.ts  labeling.ts  measure.ts  measurement.ts  normalize.ts  openai.ts  parse.ts  perplexity.ts  pipeline.ts  poolComposition.ts  reliability.ts  remeasure.ts  sampler.ts  sweep.ts  types.ts
measurement/tests/: aggregate.test.ts  budget.test.ts  conformance.test.ts  cost.test.ts  dispatch.test.ts  drift.test.ts  example.test.ts  experiment-records.test.ts  experiment.test.ts  flipRate.test.ts  gemini.test.ts  label.test.ts  labelTable.test.ts  labeling.test.ts  measure.test.ts  measurement.test.ts  normalize.test.ts  openai.test.ts  parse.test.ts  perplexity.test.ts  pipeline.test.ts  poolComposition.test.ts  reliability.test.ts  remeasure.test.ts  sampler.test.ts  sweep.test.ts
platform/: README.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
platform/src/: App.tsx  claimLadder.ts  companyCard.ts  compliance.ts  enrichmentReview.ts  gutPunch.ts  (+2 more)
prompts/: INITIAL_PROMPT.md
scripts/: bootstrap.sh  enrich-pages.ts  run-demo.sh  run-schloks-pipeline.ts  seed-thin-slice.ts  setup.sh  verify-backend.ts  verify-loop.ts
sourcing/: README.md  package.json  tsconfig.json
(+136 files in other folders)
